[package]
name = "wappsto-iot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Urban", "Lucca Christiansen"]

[dependencies]
uuid = {version = "^0.8", features = ["v4", "serde"]}
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
chrono = "^0.4"
reqwest = {version = "^0.11", features = ["blocking", "json"]}
openssl = "0.10.37"
openssl-sys = "^0.9"
tokio = {version= "^1", features = ["net"]}
x509-parser = "^0.12"

[features]
unittest = []

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
dotenv = "^0.15"
