[package]
name = "wappsto-iot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Urban", "Lucca Christiansen"]

[dependencies]
uuid = {version = "^0.8", features = ["v4", "serde"]}
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
chrono = { version = "^0.4", features = ["serde"] }
reqwest = {version = "^0.11", features = ["blocking", "json"]}
openssl = "0.10.37"
openssl-sys = "^0.9"
x509-parser = "^0.12"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
dotenv = "^0.15"
